fixed typo in instruction

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </svg>
     <!-- SVG sprite end -->
 
-    <div id="instructions"><strong>Touch</strong> the die or hit <strong>R</strong> in your keyboard to roll</div>
+    <div id="instructions"><strong>Touch</strong> the die or hit <strong>R</strong> on your keyboard to roll</div>
 
     <div id="container">
         <div id="viewport">
